Refactor weather-proxy application and update configurations
- Changed default format type in CGI script from "html" to "text".
- Removed readiness probe from deployment configuration.
- Cleaned up kustomization.yaml by removing unnecessary labels and prefixes.
- Deleted unused label patches for team overlays.
- Removed weather-proxy CGI script and associated configuration files.
- Updated namespaces to include primary user-defined network labels.
- Added new user-defined network configurations for teams.
- Reintroduced weather-proxy application with updated CGI script and configurations.
- Created new service and route definitions for weather-proxy.

--- a/labs/demo/applications/kustomize/overlays/weather-proxy/kustomization.yaml
+++ b/labs/demo/applications/kustomize/overlays/weather-proxy/kustomization.yaml
@@ -9,10 +9,13 @@ resources:
 configMapGenerator:
 - files:
   - config/custom.conf
-  name: connectivity-probe-apache-conf
+  name: weather-proxy-apache-conf
 - files:
   - cgi/index.py
-  name: connectivity-probe-cgi
-- files:
-  - config/config.json
-  name: probe-config
+  name: weather-proxy-cgi
+
+labels:
+- includeSelectors: true
+  pairs:
+    app.kubernetes.io/component: proxy
+    app.kubernetes.io/part-of: weather-platform
