--- a/labs/demo/openshift-networking/base/namespaces.yaml
+++ b/labs/demo/openshift-networking/base/namespaces.yaml
@@ -2,21 +2,29 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: team-a1
+  labels:
+    k8s.ovn.org/primary-user-defined-network: ""
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: team-a2
+  labels:
+    k8s.ovn.org/primary-user-defined-network: ""
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: team-b1
+  labels:
+    k8s.ovn.org/primary-user-defined-network: ""
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: team-b2
+  labels:
+    k8s.ovn.org/primary-user-defined-network: ""
 ---
 apiVersion: v1
 kind: Namespace
