--- a/labs/demo/netobserv/configmap.yaml
+++ b/labs/demo/netobserv/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-config
+  namespace: netobserv
 data:
   local-config.yaml: |
     auth_enabled: false
