--- a/labs/demo/netobserv/pvc.yaml
+++ b/labs/demo/netobserv/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: loki-store
+  namespace: netobserv
 spec:
   resources:
     requests:
