Add namespace to FlowCollector and update netobserv-operator configuration

--- a/labs/demo/netobserv/flowcollector.yaml
+++ b/labs/demo/netobserv/flowcollector.yaml
@@ -2,6 +2,7 @@ apiVersion: flows.netobserv.io/v1beta2
 kind: FlowCollector
 metadata:
   name: cluster
+  namespace: netobserv
 spec:
   networkPolicy:
     additionalNamespaces: []
