--- a/labs/demo/netobserv/configmap.yaml
+++ b/labs/demo/netobserv/configmap.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-config
-  namespace: netobserv
 data:
   local-config.yaml: |
     auth_enabled: false
     server:
       http_listen_port: 3100
       grpc_listen_port: 9096
-      grpc_server_max_recv_msg_size: 10485760
+      grpc_server_max_recv_msg_size: 104857600
+      grpc_server_max_send_msg_size: 104857600
       http_server_read_timeout: 1m
       http_server_write_timeout: 1m
       log_level: error
@@ -67,30 +67,33 @@ data:
         cache_ttl: 24h
     limits_config:
       ingestion_rate_strategy: global
-      ingestion_rate_mb: 10
-      ingestion_burst_size_mb: 10
-      max_label_name_length: 1024
-      max_label_value_length: 2048
-      max_label_names_per_series: 30
+      ingestion_rate_mb: 20
+      ingestion_burst_size_mb: 40
+
+      max_global_streams_per_user: 25000
+      max_streams_per_user: 25000
+
+      max_chunks_per_query: 2000000
+      max_entries_limit_per_query: 10000
+      max_query_series: 3000
+      query_timeout: 3m
+
       reject_old_samples: true
       reject_old_samples_max_age: 15m
       creation_grace_period: 10m
       enforce_metric_name: false
       max_line_size: 256000
       max_line_size_truncate: false
-      max_entries_limit_per_query: 10000
-      max_streams_per_user: 0
-      max_global_streams_per_user: 0
       unordered_writes: true
-      max_chunks_per_query: 2000000
-      max_query_length: 721h
-      max_query_parallelism: 32
-      max_query_series: 10000
-      cardinality_limit: 100000
+      max_cache_freshness_per_query: 5m
+
+      retention_period: 168h
+
+      max_label_name_length: 1024
+      max_label_value_length: 2048
+      max_label_names_per_series: 30
       max_streams_matchers_per_query: 1000
       max_concurrent_tail_requests: 10
-      retention_period: 24h
-      max_cache_freshness_per_query: 5m
       max_queriers_per_tenant: 0
       per_stream_rate_limit: 3MB
       per_stream_rate_limit_burst: 15MB
