--- a/labs/demo/netobserv/flowcollector.yaml
+++ b/labs/demo/netobserv/flowcollector.yaml
@@ -192,7 +192,7 @@ spec:
       sampling: 50
     kafkaConsumerQueueCapacity: 1000
     imagePullPolicy: IfNotPresent
-    logTypes: Flows
+    logTypes: Conversations
     kafkaConsumerReplicas: 3
     kafkaConsumerBatchSize: 10485760
   exporters: []
